--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ body {
     background-color: rgb(176,215,244);
 }
 
+.title {
+    color: #000000;
+    font-family: cursive;
+    font-size: 50px;
+    text-align: center;
+}
+
 .header {
     height: 200px;
 }
@@ -24,7 +31,6 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 3px solid whitesmoke;
 }
 
 .header-img__img {
@@ -40,4 +46,27 @@ body {
 .header-info__subtitle {
     font-family: cursive, sans-serif;
     font-size: 24px;
+}
+
+.my-work-path-container {
+    padding: 30px 0;
+    background-color: aliceblue;
+}
+
+.my-work-path-cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.my-work-path-card {
+    width: 80%;
+    border: 2px solid #000000;
+    padding: 10px;
+}
+
+.my-work-path-card__title {
+    color: #000000;
+    margin-bottom: 10px;
 }
