--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    padding: 30px 0;
     background-color: rgb(176,215,244);
 }
 
@@ -49,7 +50,6 @@ body {
 }
 
 .my-work-path-container {
-    padding: 30px 0;
     background-color: aliceblue;
 }
 
@@ -69,4 +69,15 @@ body {
 .my-work-path-card__title {
     color: #000000;
     margin-bottom: 10px;
+}
+
+.my-skills-icons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.my-skills__icon {
+    width: 56px;
+    height: 56px;
 }
