--- a/style.css
+++ b/style.css
@@ -92,3 +92,18 @@ body {
 .code-example__code {
     color: #000000;
 }
+
+.education__subtitle {
+    margin-bottom: 20px;
+    color: #000000;
+    text-align: center;
+    font-family: cursive;
+    font-size: 20px;
+}
+
+.education-school__map {
+    width: 100%;
+    height: 400px;
+    padding: 0 20px;
+    border: none;
+}
