--- a/style.css
+++ b/style.css
@@ -1,147 +1,238 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    color: #b84bd2;
+  color: #b84bd2;
+  background-color: rgb(176, 215, 244);
 }
 
 .container {
-    max-width: 1200px;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    padding: 30px 0;
-    background-color: rgb(176,215,244);
+  max-width: 1200px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 30px 0;
 }
 
 .title {
-    color: #000000;
-    font-family: cursive;
-    font-size: 50px;
-    text-align: center;
+  color: #000000;
+  font-family: cursive;
+  font-size: 50px;
+  text-align: center;
 }
 
 .header {
-    height: 200px;
+  background-color: aliceblue;
 }
 
-.header-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.nav__list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 50px;
 }
 
-.header-img__img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+.nav__item {
+  list-style-type: none;
 }
 
-.header-info {
-    width: 80%;
+.nav__link {
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
-.header-info__subtitle {
-    font-family: cursive, sans-serif;
-    font-size: 24px;
+.nav__link:hover {
+  color: #b84bd2;
+  transition: 0.3s;
 }
 
-.my-work-path-container {
-    background-color: aliceblue;
+.info {
+  height: 200px;
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.info-img__img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.info-info {
+  width: 80%;
+}
+
+.info-info__subtitle {
+  font-family: cursive, sans-serif;
+  font-size: 24px;
+}
+
+.my-work-path {
+  background-color: aliceblue;
 }
 
 .my-work-path-cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
 
 .my-work-path-card {
-    width: 80%;
-    border: 2px solid #000000;
-    padding: 10px;
+  width: 80%;
+  border: 2px solid #000000;
+  padding: 10px;
 }
 
 .my-work-path-card__title {
-    color: #000000;
-    margin-bottom: 10px;
+  color: #000000;
+  margin-bottom: 10px;
 }
 
-.my-skills-icons {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.my-skills__list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.my-skills__list-item {
+  list-style-type: none;
 }
 
 .my-skills__icon {
-    width: 56px;
-    height: 56px;
+  width: 56px;
+  height: 56px;
+}
+
+.code-example {
+  background-color: aliceblue;
 }
 
 .code-example-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .code-example__code {
-    color: #000000;
+  color: #000000;
+}
+
+.my-projects__title {
+  margin-bottom: 25px;
+}
+
+.my-project__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.my-project__item {
+  width: 33%;
+  list-style-type: none;
+}
+
+.my-project__img {
+  width: 100%;
+}
+
+.my-project__img:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+.education {
+  background-color: aliceblue;
 }
 
 .education__subtitle {
-    margin-bottom: 20px;
-    color: #000000;
-    text-align: center;
-    font-family: cursive;
-    font-size: 20px;
+  margin-bottom: 20px;
+  color: #000000;
+  text-align: center;
+  font-family: cursive;
+  font-size: 20px;
 }
 
 .education-school__map {
-    width: 100%;
-    height: 400px;
-    padding: 0 20px;
-    border: none;
-}
-
-.languages-container {
-    background-color: aliceblue;
+  width: 100%;
+  height: 400px;
+  padding: 0 20px;
+  border: none;
 }
 
 .languages__list {
-    padding-left: 50px;
+  padding-left: 50px;
 }
 
 .languages__item {
-    margin-bottom: 20px;
-    color: #000000;
-    font-size: 30px;
+  margin-bottom: 20px;
+  color: #000000;
+  font-size: 30px;
+}
+
+.contacts {
+  background-color: aliceblue;
+}
+
+.contacts-container {
+  padding: 15px 0;
+}
+
+.contacts {
+  font-size: 30px;
+}
+
+.contacts-nav__list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.contacts-nav__item {
+  list-style-type: none;
+}
+
+.contacts-nav__link-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.contacts-nav__link-icon:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
 }
 
 .footer-container {
-    padding: 0;
-    background-color: paleturquoise;
+  padding: 10px 0;
 }
 
-.footer__title {
-    font-size: 30px;
+.footer__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.footer-nav__list {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.footer__item {
+  list-style-type: none;
 }
 
-.footer-nav__item {
-    list-style-type: none;
+.footer__logo-img {
+  width: 100px;
 }
 
-.footer-nav__link-icon {
-    width: 50px;
-    height: 50px;
+.footer__icon-img {
+  width: 70px;
+}
+
+.footer__info {
+  color: black;
 }
